# http-server-client

./: Cargo.toml
src/client/: http_client.rs
src/server/: server.rs
