[package]
name = "http-server-example"
version = "0.1.0"
authors = ["Ramesh <mail2.rameshr@gmail.com>"]

[dependencies]
hyper = "0.11.6"
futures = "0.1.14"
futures-cpupool = "0.1"
http = { version = "0.1", optional = true }
httparse = "1.0"
tokio-core = "0.1.6"
tokio-proto = "0.1"
tokio-service = "0.1"
tokio-io = "0.1"
pretty_env_logger = "0.1"

[dev-dependencies]
num_cpus = "1.0"
pretty_env_logger = "0.1"
spmc = "0.2"

[[bin]]
name = "http_client"
path = "src/bin/client.rs"
